[package]
name = "videodownload"
version = "0.1.0"
edition = "2021"   # use 2021 (2024 isn’t stable yet)

[dependencies]
anyhow = "1.0.99"
regex = "1.11.1"
reqwest = { version = "0.12.3", features = ["json"] }
sanitize-filename = "0.6.0"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
