[package]
name = "videodownload"
version = "0.1.0"
edition = "2021"   # use 2021 (2024 isn’t stable yet)

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.19"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sanitize-filename = "0.5"
tokio = { version = "1", features = ["full"] }
